# gradik

./: .gitignore  Makefile  README.md  app.py  build.sh  install.sh  pyproject.toml  release.sh  requirements.txt  run.sh  setup.py
.github/workflows/: release.yml
scripts/: build.sh  dev.sh  release-manual.sh  release.sh
