[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gradik"
version = "1.0.0"
description = "Gradle Status Dashboard - Monitor Gradle, Kotlin daemons, IDEs, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
keywords = ["gradle", "kotlin", "android", "daemon", "monitor", "dashboard"]
dependencies = [
    "flask>=2.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
gradik = "gradik:main"

[project.urls]
Homepage = "https://github.com/onelenyk/gradik"
Repository = "https://github.com/onelenyk/gradik"
Issues = "https://github.com/onelenyk/gradik/issues"
